log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-file
          emptyDir: {}
      containers:
        - name: log-writer
          image: tatuno/log-writer
          volumeMounts:
          - name: shared-file
            mountPath: /usr/src/app/files
        - name: log-reader
          image: tatuno/log-reader:v0.4
          volumeMounts:
          - name: shared-file
            mountPath: /usr/src/app/files
