log-output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-material-ingress
  namespace: log-output
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-pingpong-stripprefix@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: log-output-svc
            port:
              number: 2345
      - path: /pingpong
        pathType: ImplementationSpecific
        backend:
          service:
            name: ping-pong-svc
            port:
              number: 2346
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: pingpong-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /pingpong
